--- a/src/components/auth-form-1/authForm1.css
+++ b/src/components/auth-form-1/authForm1.css
@@ -1,18 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 
-:root {
-  --font-family: "Poppins", sans-serif;
-  --h1-font-size: 1.75rem;
-  --normal-font-size: 1rem;
-  --small-font-size: 0.813rem;
-  --font-medium: 500;
-
-  --white-color: hsl(0, 0%, 100%);
-  --black-color: hsl(0, 0%, 0%);
-  --color-blue: hsl(210, 85%, 45%);
-  --color-blue-lighten: hsl(210, 80%, 60%);
-}
-
 .auth1 {
   position: relative;
   height: 100vh;
@@ -28,7 +15,7 @@
 }
 
 .auth1 .login__form {
-  min-height: 520px;
+  min-height: 522px;
   position: relative;
   background-color: hsla(0, 0%, 10%, 0.1);
   border: 2px solid var(--white-color);
@@ -40,7 +27,7 @@
 
 .auth1 .login__title {
   text-align: center;
-  font-size: var(--h1-font-size);
+  font-size: 1.75rem;
   font-weight: var(--font-medium);
   margin-bottom: 2rem;
 }
@@ -129,6 +116,7 @@
 .auth1 .login__check-input {
   width: 16px;
   height: 16px;
+  accent-color: var(--white-color);
 }
 
 .auth1 .login__forgot {
@@ -157,7 +145,7 @@
 }
 
 .auth1 .login__register a {
-  color: var(--white-color);
+  color: var(--black-color);
   font-weight: var(--font-medium);
 }
 
