--- a/src/components/auth-form-2/authForm2.css
+++ b/src/components/auth-form-2/authForm2.css
@@ -1,17 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
-:root {
-  --white-color: hsl(0, 0%, 100%);
-  --black-color: hsl(0, 0%, 0%);
-  --border-color: hsla(0, 0%, 100%, 0.7);
-
-  --body-font: "Poppins", sans-serif;
-  --h1-font-size: 2rem;
-  --normal-font-size: 1rem;
-  --small-font-size: 0.813rem;
-  --font-medium: 500;
-}
-
 .auth2 {
   position: relative;
   height: 100vh;
@@ -22,7 +10,7 @@
     var(--color-purple),
     var(--color-purple-lighten)
   );
-  font-family: var(--body-font);
+  font-family: var(--font-family);
   font-size: var(--normal-font-size);
 }
 
@@ -40,7 +28,7 @@
 
 .auth2 .login__title {
   text-align: center;
-  font-size: var(--h1-font-size);
+  font-size: 2rem;
   margin-bottom: 1.25rem;
 }
 
@@ -68,7 +56,7 @@
   background: none;
   color: var(--white-color);
   padding-block: 1rem;
-  font-family: var(--body-font);
+  font-family: var(--font-family);
   font-size: var(--normal-font-size);
 }
 
@@ -119,7 +107,7 @@
   color: var(--black-color);
   font-weight: var(--font-medium);
   cursor: pointer;
-  font-family: var(--body-font);
+  font-family: var(--font-family);
   font-size: var(--normal-font-size);
 }
 
@@ -129,7 +117,7 @@
 }
 
 .auth2 .login__register a {
-  color: var(--white-color);
+  color: var(--black-color);
   font-weight: var(--font-medium);
 }
 
