--- a/src/components/auth-form-3/authForm3.css
+++ b/src/components/auth-form-3/authForm3.css
@@ -1,33 +1,8 @@
-/*=============== GOOGLE FONTS ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
-/*=============== VARIABLES CSS ===============*/
 :root {
-  --first-color: hsl(47, 90%, 55%);
-  --second-color: hsl(47, 85%, 65%);
-  --color-yellow: hsl(47, 90%, 55%);
-  --color-yellow-light: hsl(47, 85%, 65%);
-  --color-yellow-lighten: hsl(47, 80%, 78%);
-  --title-color: hsl(244, 12%, 12%);
-  --text-color: hsl(244, 4%, 36%);
-  --body-color: hsl(208, 97%, 85%);
-
-  --body-font: "Poppins", sans-serif;
-  --h2-font-size: 1.25rem;
-  --normal-font-size: 1rem;
-  --small-font-size: 0.813rem;
-  --smaller-font-size: 0.75rem;
-  --font-medium: 500;
-  --font-semi-bold: 600;
-}
-
-@media screen and (min-width: 1024px) {
-  :root {
-    --h2-font-size: 1.75rem;
-    --normal-font-size: 1rem;
-    --small-font-size: 0.875rem;
-    --smaller-font-size: 0.813rem;
-  }
+  --title-color-auth3: hsl(244, 12%, 12%);
+  --text-color-auth3: hsl(244, 4%, 36%);
 }
 
 .auth3 {
@@ -37,26 +12,26 @@
   height: 100vh;
   background: linear-gradient(
     135deg,
-    var(--color-yellow),
-    var(--color-yellow-lighten)
+    var(--color-orange),
+    var(--color-orange-lighten)
   );
-  font-family: var(--body-font);
-  color: var(--text-color);
+  font-family: var(--font-family);
+  color: var(--text-color-auth3);
   padding: 1rem;
 }
 
-.login__content,
-.login__form,
-.login__inputs {
+.auth3 .login__content,
+.auth3 .login__form,
+.auth3 .login__inputs {
   display: grid;
 }
 
-.login__content {
+.auth3 .login__content {
   width: 100%;
   max-width: 450px;
 }
 
-.login__form {
+.auth3 .login__form {
   min-height: 523px;
   background-color: hsla(244, 16%, 92%, 0.6);
   border: 2px solid hsla(244, 16%, 92%, 0.75);
@@ -67,65 +42,65 @@
   width: 100%;
 }
 
-.login__title {
-  color: var(--title-color);
-  font-size: var(--h2-font-size);
+.auth3 .login__title {
+  color: var(--title-color-auth3);
+  font-size: 1.25rem;
   margin-bottom: 0.5rem;
 }
 
-.login__title span {
-  color: var(--first-color);
+.auth3 .login__title span {
+  color: var(--color-orange);
 }
 
-.login__description {
+.auth3 .login__description {
   font-size: var(--small-font-size);
   margin-bottom: 1rem;
 }
 
-.login__inputs {
+.auth3 .login__inputs {
   row-gap: 1rem;
   margin-bottom: 1rem;
 }
 
-.login__label {
+.auth3 .login__label {
   display: block;
-  color: var(--title-color);
+  color: var(--title-color-auth3);
   font-size: var(--small-font-size);
   font-weight: var(--font-semi-bold);
   margin-bottom: 0.25rem;
 }
 
-.login__input {
+.auth3 .login__input {
   width: 100%;
   padding: 14px 12px;
   border-radius: 6px;
-  border: 2px solid var(--text-color);
+  border: 2px solid var(--text-color-auth3);
   background-color: hsla(244, 16%, 92%, 0.6);
-  color: var(--title-color);
+  color: var(--title-color-auth3);
   font-size: var(--smaller-font-size);
-  font-family: var(--body-font);
+  font-family: var(--font-family);
   font-weight: var(--font-medium);
   transition: border 0.4s;
 }
 
-.login__input::placeholder {
-  color: var(--text-color);
+.auth3 .login__input::placeholder {
+  color: var(--text-color-auth3);
 }
 
-.login__input:focus,
-.login__input:valid {
-  border: 2px solid var(--first-color);
+.auth3 .login__input:focus,
+.auth3 .login__input:valid {
+  border: 2px solid var(--color-orange);
 }
 
-.login__box {
+.auth3 .login__box {
   position: relative;
 }
 
-.login__box .login__input {
+.auth3 .login__box .login__input {
   padding-right: 36px;
 }
 
-.login__eye {
+.auth3 .login__eye {
   width: max-content;
   height: max-content;
   position: absolute;
@@ -137,27 +112,27 @@
   cursor: pointer;
 }
 
-.login__check {
+.auth3 .login__check {
   display: flex;
   column-gap: 0.5rem;
   align-items: center;
   margin-bottom: 1rem;
 }
 
-.login__check-input {
+.auth3 .login__check-input {
   appearance: none;
   width: 16px;
   height: 16px;
-  border: 2px solid var(--text-color);
+  border: 2px solid var(--text-color-auth3);
   background-color: hsla(244, 16%, 92%, 0.2);
   border-radius: 0.25rem;
 }
 
-.login__check-input:checked {
-  background: var(--first-color);
+.auth3 .login__check-input:checked {
+  background: var(--color-orange);
 }
 
-.login__check-input:checked::before {
+.auth3 .login__check-input:checked::before {
   content: "✔";
   display: block;
   color: #fff;
@@ -165,71 +140,93 @@
   transform: translate(1.5px, -2.5px);
 }
 
-.login__check-label {
+.auth3 .login__check-label {
   font-size: var(--small-font-size);
 }
 
-.login__buttons {
+.auth3 .login__buttons {
   display: flex;
   gap: 0.75rem;
   flex-wrap: wrap;
 }
 
-.login__button {
+.auth3 .login__button {
   flex: 1;
   padding: 14px 2rem;
   border-radius: 6px;
-  background: linear-gradient(180deg, var(--first-color), var(--second-color));
+  background: linear-gradient(
+    180deg,
+    var(--color-orange),
+    var(--color-orange-light)
+  );
   color: #fff;
-  font-family: var(--body-font);
+  font-family: var(--font-family);
   font-size: var(--small-font-size);
   font-weight: var(--font-semi-bold);
-  box-shadow: 0 6px 24px hsla(45, 95%, 50%, 0.5);
+  /* box-shadow: 0 6px 24px hsla(20, 95%, 50%, 0.5); */
   margin-bottom: 1rem;
   cursor: pointer;
 }
 
-.login__button-ghost {
+.auth3 .login__button-ghost {
   background: hsla(244, 16%, 92%, 0.6);
-  border: 2px solid var(--first-color);
-  color: var(--first-color);
+  border: 2px solid var(--color-orange);
+  color: var(--color-orange);
   box-shadow: none;
 }
 
-.login__forgot {
+.auth3 .login__forgot {
   font-size: var(--smaller-font-size);
   font-weight: var(--font-semi-bold);
-  color: var(--first-color);
+  color: var(--color-orange);
   text-decoration: none;
 }
 
-.login__forgot:hover {
+.auth3 .login__forgot:hover {
   text-decoration: underline;
 }
 
 @media screen and (max-width: 360px) {
-  .login__form {
+  .auth3 .login__form {
     min-height: 620px;
   }
-  .login__buttons {
+  .auth3 .login__buttons {
     flex-direction: column;
   }
 }
 
 @media screen and (min-width: 576px) {
-  .login__form {
+  .auth3 .login__form {
     max-width: 450px;
   }
 }
 
 @media screen and (min-width: 1024px) {
-  .login__form {
+  .auth3 .login__form {
     min-height: 550px;
+  }
+  .auth3 .login__title {
+    font-size: 1.75rem;
+  }
+  .auth3 .login__description,
+  .auth3 .login__label,
+  .auth3 .login__button {
+    font-size: 1rem;
+  }
+  .auth3 .login__description,
+  .auth3 .login__label,
+  .auth3 .login__check-label,
+  .auth3 .login__button,
+  .auth3 .login__forgot {
+    font-size: 0.875rem;
+  }
+  .auth3 .login__input {
+    font-size: 0.813rem;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .login__form {
+  .auth3 .login__form {
     min-height: 655px;
     row-gap: 2rem;
     padding: 3rem;
@@ -237,34 +234,34 @@
     border: 2.5px solid hsla(244, 16%, 92%, 0.75);
   }
 
-  .login__description,
-  .login__label,
-  .login__button {
+  .auth3 .login__description,
+  .auth3 .login__label,
+  .auth3 .login__button {
     font-size: var(--normal-font-size);
   }
 
-  .login__inputs {
+  .auth3 .login__inputs {
     row-gap: 1.25rem;
     margin-bottom: 0.75rem;
   }
 
-  .login__input {
-    border: 2.5px solid var(--text-color);
+  .auth3 .login__input {
+    border: 2.5px solid var(--text-color-auth3);
     padding: 1rem;
     font-size: var(--small-font-size);
   }
 
-  .login__input:focus,
-  .login__input:valid {
-    border: 2.5px solid var(--first-color);
+  .auth3 .login__input:focus,
+  .auth3 .login__input:valid {
+    border: 2.5px solid var(--color-orange);
   }
 
-  .login__button {
+  .auth3 .login__button {
     padding-block: 1rem;
     margin-bottom: 1.25rem;
   }
 
-  .login__button-ghost {
-    border: 2.5px solid var(--first-color);
+  .auth3 .login__button-ghost {
+    border: 2.5px solid var(--color-orange);
   }
 }
