--- a/src/components/auth-form-5/authForm5.css
+++ b/src/components/auth-form-5/authForm5.css
@@ -1,18 +1,4 @@
-/*=============== GOOGLE FONTS ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap");
-
-/*=============== VARIABLES CSS ===============*/
-:root {
-  --first-color: hsl(244, 75%, 57%);
-  --white-color: #fff;
-  --black-color: #3f3d56;
-  --gray-color: #f1f1f1;
-  --border-color: #3f3d5691;
-
-  --body-font: "Poppins", sans-serif;
-  --normal-font-size: 1rem;
-  --small-font-size: 0.875rem;
-}
 
 .auth5 {
   padding: 1rem 0.5rem;
@@ -22,15 +8,15 @@
   place-items: center;
   background: linear-gradient(
     135deg,
-    var(--color-green-light),
-    var(--color-green-lighten)
+    var(--color-red-light),
+    var(--color-red-lighten)
   );
-  font-family: var(--body-font);
+  font-family: var(--font-family);
   font-size: var(--normal-font-size);
 }
 
 .form__container {
-  background-color: var(--black-color);
+  background-color: var(--color-text);
   padding: 1rem;
   border-radius: 1rem;
   height: 100%;
@@ -40,6 +26,7 @@
 .form__container h1 {
   text-align: center;
   margin-bottom: 0.75rem;
+  color: var(--color-red);
 }
 
 .form__inner {
@@ -63,26 +50,27 @@
   text-transform: uppercase;
   letter-spacing: 0.05rem;
   margin-bottom: 0.4rem;
+  color: var(--color-red-light);
 }
 
 .form__container input {
-  border: 2px solid var(--border-color);
+  border: 2px solid var(--color-red-lighten);
   border-radius: 0.6rem;
   outline: none;
   padding: 0.625rem 1.25rem;
   width: 100%;
-  font-family: var(--body-font);
+  font-family: var(--font-family);
 }
 
 .form__container input:focus {
-  border-color: var(--black-color);
+  border: 2px solid var(--color-red);
 }
 
 .form__btn {
-  color: var(--white-color);
   padding: 0.625rem 3rem;
   font-size: 1rem;
-  background-color: var(--black-color);
+  background: linear-gradient(180deg, var(--color-red), var(--color-red-light));
+  color: var(--white-color);
   margin-top: 1.25rem;
   border: none;
   outline: none;
@@ -103,14 +91,19 @@
   margin: 1rem 0 0.5rem 0;
 }
 
+.form__checkboxes small {
+  color: var(--color-red-lighten);
+}
+
 .checkbox {
   display: none;
 }
 
 .label {
   position: relative;
-  background-color: #fff;
+  background-color: var(--white-color);
   border-radius: 50px;
+  border: 1px solid var(--color-red-lighten);
   margin: 0 1.25rem 0 0;
   width: 50px;
   height: 26px;
@@ -118,9 +111,9 @@
 }
 
 .ball {
-  background-color: var(--black-color);
+  background-color: var(--color-red);
   position: absolute;
-  top: 2px;
+  top: 1.5px;
   left: 2px;
   border-radius: 50%;
   width: 22px;
@@ -129,18 +122,19 @@
 }
 
 .checkbox:checked + .label .ball {
-  transform: translateX(24px);
+  transform: translateX(22.5px);
 }
 
 .form__switch {
   margin-top: 1rem;
   text-align: center;
   font-size: var(--small-font-size);
+  color: var(--color-red-light);
 }
 
 .form__switch span {
   font-weight: 600;
-  color: var(--first-color);
+  color: var(--color-red);
   cursor: pointer;
 }
 
@@ -148,7 +142,6 @@
   text-decoration: underline;
 }
 
-/*=============== BREAKPOINTS ===============*/
 @media (min-width: 465px) {
   .auth5 {
     padding: 2rem 1rem;
