--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,21 @@
-/* === COLORS === */
 :root {
+  --font-family: "Poppins", sans-serif;
+  --normal-font-size: 1rem;
+  --small-font-size: 0.813rem;
+  --smaller-font-size: 0.75rem;
+  --font-medium: 500;
+  --font-semi-bold: 600;
+
+  /* === NEUTRES === */
+  --white-color: hsl(0, 0%, 100%);
+  --black-color: hsl(0, 0%, 0%);
+  --border-color: hsla(0, 0%, 100%, 0.7);
+  --color-bg: hsl(0, 0%, 8%);
+  --color-surface: hsl(0, 0%, 12%);
+  --color-border: hsl(0, 0%, 25%);
+  --color-text: hsl(0, 0%, 95%);
+  --color-muted: hsl(0, 0%, 65%);
+
   /* === GREEN === */
   --color-green: hsl(175, 55%, 40%);
   --color-green-light: hsl(175, 30%, 48%);
@@ -29,13 +45,6 @@
   --color-purple: hsl(270, 60%, 55%);
   --color-purple-light: hsl(270, 55%, 65%);
   --color-purple-lighten: hsl(270, 50%, 75%);
-
-  /* === NEUTRES === */
-  --color-bg: hsl(0, 0%, 8%);
-  --color-surface: hsl(0, 0%, 12%);
-  --color-border: hsl(0, 0%, 25%);
-  --color-text: hsl(0, 0%, 95%);
-  --color-muted: hsl(0, 0%, 65%);
 }
 
 /* === RESET & BASE === */
