--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 :root {
   --font-family: "Poppins", sans-serif;
+  --big-font-size: 1.5rem;
   --normal-font-size: 1rem;
   --small-font-size: 0.813rem;
   --smaller-font-size: 0.75rem;
+  --tiny-font-size: 0.688rem;
   --font-medium: 500;
   --font-semi-bold: 600;
 
@@ -71,6 +73,7 @@ button {
 img {
   max-width: 100%;
   height: auto;
+  /* display: block; */
 }
 
 /* === LAYOUT === */
