--- a/src/components/auth-form-6/authForm6.css
+++ b/src/components/auth-form-6/authForm6.css
@@ -11,9 +11,8 @@
 }
 
 .auth6__bg {
-  background-color: var(--body-color-auth6);
-  font-family: var(--font-family-auth6);
-  font-size: var(--normal-font-size);
+  position: relative;
+  height: 100vh;
 }
 
 .auth6__blob {
@@ -21,15 +20,19 @@
 }
 
 .auth6 {
-  position: relative;
-  height: 100vh;
-  align-items: center;
   overflow: hidden;
   display: grid;
-  gap: 1rem;
   max-width: 1120px;
   margin-inline: 1.5rem;
   color: var(--text-color-auth6);
+  background-color: var(--body-color-auth6);
+  font-family: var(--font-family-auth6);
+  font-size: var(--normal-font-size);
+}
+
+.auth6__login,
+.auth6__register {
+  padding: 6rem 1.2rem 0 1.2rem;
 }
 
 .auth6__title {
@@ -41,7 +44,7 @@
 }
 
 .auth6__area {
-  width: 380px;
+  max-width: 380px;
   margin-inline: auto;
 }
 
@@ -222,7 +225,7 @@
   color: var(--first-color-auth6-alt);
 }
 
-.auth6__access,
+.auth6__login,
 .auth6__register {
   position: absolute;
   left: 0;
@@ -231,38 +234,26 @@
   transition: transform 0.4s, opacity 0.4s 0.1s;
 }
 
+.auth6__login,
 .auth6__register {
-  transform: translateX(15rem);
-  opacity: 0;
-  pointer-events: none;
-}
-
-/* Show hide login & create account */
-.auth6.active .auth6__access {
-  transform: translateX(15rem);
-  opacity: 0;
-  pointer-events: none;
-}
-
-.auth6.active .auth6__register {
   transform: translateX(0);
-  opacity: 1;
-  pointer-events: initial;
 }
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
 @media screen and (max-width: 320px) {
-  .cauth6 {
+  .auth6 {
     margin-inline: 1rem;
+  }
+
+  .auth6__login,
+  .auth6__register {
+    padding: 3rem 1.2rem;
   }
 }
 
 /* For medium devices */
 @media screen and (max-width: 540px) {
-  .auth6__area {
-    width: auto;
-  }
 }
 
 /* For large devices */
@@ -273,15 +264,20 @@
   .auth6 {
     margin-inline: auto;
   }
+  .auth6__register,
+  .auth6__login {
+    transform: translateX(12rem);
+  }
   .auth6__area {
-    width: 460px;
+    min-width: 460px;
     margin: initial;
   }
-  .auth6__access,
+  .auth6__login,
   .auth6__register {
     width: 600px;
   }
   .auth6__title {
+    width: 600px;
     font-size: 3rem;
     text-align: initial;
     margin-bottom: 3rem;
