--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
   --small-font-size: 0.813rem;
   --smaller-font-size: 0.75rem;
   --tiny-font-size: 0.688rem;
-  --font-medium: 500;
   --font-semi-bold: 600;
+  --font-medium: 500;
 
   /* === NEUTRES === */
   --white-color: hsl(0, 0%, 100%);
@@ -17,6 +17,12 @@
   --color-border: hsl(0, 0%, 25%);
   --color-text: hsl(0, 0%, 95%);
   --color-muted: hsl(0, 0%, 65%);
+
+  /* === WHITE === */
+  --color-white-soft: hsl(0, 0%, 98%);
+  --color-white-light: hsl(0, 0%, 95%);
+  --color-white-muted: hsl(0, 0%, 92%);
+  --color-white-smoke: hsl(0, 0%, 89%);
 
   /* === GREEN === */
   --color-green: hsl(175, 55%, 40%);
