--- a/src/index.css
+++ b/src/index.css
@@ -97,30 +97,22 @@ img {
 }
 
 /* === ANIMATION === */
-.authWrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  /* background-color: var(--colorPrimary); */
-  /* padding: 1rem; */
-  gap: 5rem;
-  flex-wrap: wrap;
-}
-
 .flip-card {
-  background-color: transparent;
+  /* background-color: transparent; */
   width: 400px;
-  height: 430px;
+  height: 530px;
+
   perspective: 1000px;
+  transform-style: preserve-3d;
+  /* overflow: hidden; */
 }
 
 .flip-card-inner {
-  position: relative;
+  /* position: relative; */
   width: 100%;
   height: 100%;
-  transition: transform 0.8s ease-in-out;
   transform-style: preserve-3d;
+  transition: transform 0.8s ease-in-out;
 }
 
 .flipped .flip-card-inner {
@@ -132,14 +124,17 @@ img {
   position: absolute;
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
   backface-visibility: hidden;
-  border-radius: 1rem;
-  background-color: transparent;
+  -webkit-backface-visibility: hidden;
+  /* border-radius: 1rem; */
+  /* background-color: transparent; */
   /* padding: 2rem; */
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 .flip-card-back {
