--- a/src/components/auth-form-1/authForm1.css
+++ b/src/components/auth-form-1/authForm1.css
@@ -116,7 +116,7 @@
 .auth1__check-input {
   width: 16px;
   height: 16px;
-  accent-color: var(--white-color);
+  /* accent-color: var(--white-color); */
 }
 
 .auth1__check-label {
