--- a/src/components/auth-form-4/authForm4.css
+++ b/src/components/auth-form-4/authForm4.css
@@ -2,7 +2,7 @@
 
 .auth4 {
   position: relative;
-  height: 100vh;
+  min-height: 100dvh;
   display: grid;
   place-items: center;
   background: linear-gradient(
