--- a/src/components/auth-form-1/authForm1.css
+++ b/src/components/auth-form-1/authForm1.css
@@ -2,7 +2,7 @@
 
 .auth1 {
   position: relative;
-  height: 100vh;
+  min-height: 100dvh;
   display: grid;
   align-items: center;
   background: linear-gradient(
