--- a/src/components/auth-form-2/authForm2.css
+++ b/src/components/auth-form-2/authForm2.css
@@ -2,7 +2,7 @@
 
 .auth2 {
   position: relative;
-  height: 100vh;
+  min-height: 100dvh;
   display: grid;
   align-items: center;
   background: linear-gradient(
