--- a/src/components/auth-form-3/authForm3.css
+++ b/src/components/auth-form-3/authForm3.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100dvh;
   background: linear-gradient(
     135deg,
     var(--color-orange),
